ubiquity-slideshow-ubuntu (85) UNRELEASED; urgency=medium

  * Xubuntu: Update the proposed default nick to 'xubuntu..i' (LP: #1369100)

 -- Pasi Lallinaho <pasi@shimmerproject.org>  Sat, 13 Sep 2014 17:23:10 +0300

ubiquity-slideshow-ubuntu (85) utopic; urgency=medium

  * Update to 14.10

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 26 Aug 2014 18:57:11 +0200

ubiquity-slideshow-ubuntu (84) utopic; urgency=medium

  [ Jackson Doak ]
  * Update screenshots for ubuntu-gnome (LP: #1300464)

  [ Tim Lunn ]
  * Minor formatting fix for ubuntu-gnome media.html slide

 -- Dimitri John Ledkov <xnox@ubuntu.com>  Thu, 01 May 2014 12:13:56 +0100

ubiquity-slideshow-ubuntu (83) trusty; urgency=medium

  * Remove old Ubuntu One slides from edubuntu.
  * Update PO templates.
  * Update translations from Launchpad.

 -- Stéphane Graber <stgraber@ubuntu.com>  Tue, 08 Apr 2014 11:03:49 -0400

ubiquity-slideshow-ubuntu (82) trusty; urgency=medium

  * Remove U1 slide from Ubuntu slideshows. (LP: #1300916)

 -- Dimitri John Ledkov <xnox@ubuntu.com>  Tue, 01 Apr 2014 18:49:28 +0100

ubiquity-slideshow-ubuntu (81) trusty; urgency=medium

  * Drop arkose from the Edubuntu slideshow, the package is broken and
    will be dropped from the archive in 14.04.
  * Update PO templates.
  * Update translations from Launchpad.

 -- Stéphane Graber <stgraber@ubuntu.com>  Sun, 30 Mar 2014 16:57:02 -0400

ubiquity-slideshow-ubuntu (80) trusty; urgency=medium

  [ Simon Steinbeiss ]
  * Xubuntu: Update the "Personalize" slide. (LP: #1294619)
  * Xubuntu: Create Tahr-art for the "Thanks" slide. (LP: #1294619)

  [ Pasi Lallinaho ]
  * Xubuntu: Many minor visual enhancements.
  * Update translation templates.

  [ Kaj Ailomaa ]
  * Slideshow update for Ubuntu Studio. (LP: #1294084)

  [ Stéphane Graber ]
  * Update translation templates.
  * Update translations from Launchpad.

 -- Stéphane Graber <stgraber@ubuntu.com>  Mon, 24 Mar 2014 10:38:57 -0400
