@@ -1,8 +1,9 @@
 ubiquity-slideshow-ubuntu (85) UNRELEASED; urgency=medium
 
   * Xubuntu: Update the proposed default nick to 'xubuntu..i' (LP: #1369100)
+  * Xubuntu: Hopefully stop the scrollbars appearing for any setups (LP: #986283)
 
- -- Pasi Lallinaho <pasi@shimmerproject.org>  Sat, 13 Sep 2014 17:23:10 +0300
+ -- Pasi Lallinaho <pasi@shimmerproject.org>  Sun, 14 Sep 2014 12:35:00 +0300
 
 ubiquity-slideshow-ubuntu (85) utopic; urgency=medium
 
